Added code 4/28 to get all tests running & mvn, spring boot app running but webpage not being found

--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,24 @@
   </properties>
 
   <dependencies>
+    <!-- Open CSV -->
     <dependency>
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>5.9</version>
+    </dependency>
+
+    <!-- Getting rid of common logging error -->
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.4</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- JUnit -->
